- Update mask generator notebook - Saved coordinate point of dots.

--- a/masks_generator.ipynb
+++ b/masks_generator.ipynb
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "outputs": [],
    "source": [
-    "train_label_xml_path = './datasets/taydo_splitted_data/labels/train/'\n",
-    "test_label_xml_path = './datasets/taydo_splitted_data/labels/test/'\n",
-    "validation_label_xml_path = './datasets/taydo_splitted_data/labels/validation/'\n",
+    "train_label_xml_path = './datasets/taydo_splitted_data/labels/train_xml/'\n",
+    "test_label_xml_path = './datasets/taydo_splitted_data/labels/test_xml/'\n",
+    "validation_label_xml_path = './datasets/taydo_splitted_data/labels/val_xml/'\n",
     "\n",
-    "train_dots_path = './datasets/taydo_splitted_data/train/dots/'\n",
-    "test_dots_path = './datasets/taydo_splitted_data/test/dots/'\n",
-    "validation_dots_path = './datasets/taydo_splitted_data/validation/dots/'\n",
+    "train_dots_path = './datasets/taydo_splitted_data/train/coordinate_texts/'\n",
+    "test_dots_path = './datasets/taydo_splitted_data/test/coordinate_texts/'\n",
+    "validation_dots_path = './datasets/taydo_splitted_data/validation/coordinate_texts/'\n",
     "\n",
     "train_masks_path = './datasets/taydo_splitted_data/train/masks/'\n",
     "test_masks_path = './datasets/taydo_splitted_data/test/masks/'\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "def calc_centeroid_point(point_list):\n",
@@ -84,10 +84,50 @@
     "\n",
     "def save_bounding_box_to_dots(save_directory_path, bounding_box_collections):\n",
     "    for info in bounding_box_collections:\n",
-    "        f = open(save_directory_path + info['file_name'], \"w\")\n",
-    "        centeroid = calc_centeroid_point(info['bounding_box_points'])\n",
-    "        f.write('\\t'.join([str(centeroid[0]), str(centeroid[1])]) + '\\n')\n",
+    "        saved_file = os.path.splitext(save_directory_path + info['file_name'])[0] + '.txt'\n",
+    "        f = open(saved_file, \"w\")\n",
+    "        for points in info['bounding_box_points']:\n",
+    "            centeroid = calc_centeroid_point(points)\n",
+    "            f.write('\\t'.join([str(centeroid[0]), str(centeroid[1])]) + '\\n')\n",
     "        f.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "bounding_box_collections = get_bounding_box_points(train_label_xml_path)\n",
+    "save_bounding_box_to_dots(train_dots_path, bounding_box_collections)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "500"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bounding_box_collections)"
    ],
    "metadata": {
     "collapsed": false,
