--- a/trancos_v3_pre-processing_data.ipynb
+++ b/trancos_v3_pre-processing_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,44 +12,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imagesPath = './images/'\n",
-    "dotsPath = './dots/'\n",
-    "masksPath = './masks/'\n",
-    "coordinateTextsPath = './coordinate_texts/'\n",
+    "imagesPath = './splitted_data/images/'\n",
+    "dotsPath = './splitted_data/dots/'\n",
+    "masksPath = './splitted_data/masks/'\n",
+    "coordinateTextsPath = './splitted_data/coordinate_texts/'\n",
     "\n",
-    "imageSetsTrainPath = './image_sets/training.txt'\n",
-    "imageSetsTestPath = './image_sets/test.txt'\n",
-    "imageSetsValidationPath = './image_sets/validation.txt'\n",
-    "imageSetsTrainValPath = './image_sets/trainval.txt'\n",
+    "imageSetsTrainPath = './splitted_data/image_sets/training.txt'\n",
+    "imageSetsTestPath = './splitted_data/image_sets/test.txt'\n",
+    "imageSetsValidationPath = './splitted_data/image_sets/validation.txt'\n",
+    "imageSetsTrainValPath = './splitted_data/image_sets/trainval.txt'\n",
     "\n",
-    "dataTrainImagesPath = './train/images/'\n",
-    "dataTrainDotsPath = './train/dots/'\n",
-    "dataTrainMasksPath = './train/masks/'\n",
-    "dataTrainCoordinateTextsPath = './train/coordinate_texts/'\n",
+    "dataTrainImagesPath = './splitted_data/train/images/'\n",
+    "dataTrainDotsPath = './splitted_data/train/dots/'\n",
+    "dataTrainMasksPath = './splitted_data/train/masks/'\n",
+    "dataTrainCoordinateTextsPath = './splitted_data/train/coordinate_texts/'\n",
     "\n",
-    "dataTestImagesPath = './test/images/'\n",
-    "dataTestDotsPath = './test/dots/'\n",
-    "dataTestMasksPath = './test/masks/'\n",
-    "dataTestCoordinateTextsPath = './test/coordinate_texts/'\n",
+    "dataTestImagesPath = './splitted_data/test/images/'\n",
+    "dataTestDotsPath = './splitted_data/test/dots/'\n",
+    "dataTestMasksPath = './splitted_data/test/masks/'\n",
+    "dataTestCoordinateTextsPath = './splitted_data/test/coordinate_texts/'\n",
     "\n",
-    "dataValidationImagesPath = './validation/images/'\n",
-    "dataValidationDotsPath = './validation/dots/'\n",
-    "dataValidationMasksPath = './validation/masks/'\n",
-    "dataValidationCoordinateTextsPath = './validation/coordinate_texts/'\n",
+    "dataValidationImagesPath = './splitted_data/validation/images/'\n",
+    "dataValidationDotsPath = './splitted_data/validation/dots/'\n",
+    "dataValidationMasksPath = './splitted_data/validation/masks/'\n",
+    "dataValidationCoordinateTextsPath = './splitted_data/validation/coordinate_texts/'\n",
     "\n",
-    "dataTrainValImagesPath = './train_val/images/'\n",
-    "dataTrainValDotsPath = './train_val/dots/'\n",
-    "dataTrainValMasksPath = './train_val/masks/'\n",
-    "dataTrainValCoordinateTextsPath = './train_val/coordinate_texts/'"
+    "dataTrainValImagesPath = './splitted_data/train_val/images/'\n",
+    "dataTrainValDotsPath = './splitted_data/train_val/dots/'\n",
+    "dataTrainValMasksPath = './splitted_data/train_val/masks/'\n",
+    "dataTrainValCoordinateTextsPath = './splitted_data/train_val/coordinate_texts/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def splittingData(n_samples=None):\n",
@@ -102,11 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "splittingData()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
