- Masks generator notebook.

--- a/masks_generator.ipynb
+++ b/masks_generator.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "import os\n",
     "from PIL import Image\n",
-    "import xml.etree.ElementTree as ET"
+    "import xml.etree.ElementTree as ET\n",
+    "import numpy as np"
    ],
    "metadata": {
     "collapsed": false,
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "train_label_xml_path = './datasets/taydo_splitted_data/labels/train_xml/'\n",
@@ -29,9 +30,9 @@
     "test_dots_path = './datasets/taydo_splitted_data/test/coordinate_texts/'\n",
     "validation_dots_path = './datasets/taydo_splitted_data/validation/coordinate_texts/'\n",
     "\n",
-    "train_masks_path = './datasets/taydo_splitted_data/train/masks/'\n",
-    "test_masks_path = './datasets/taydo_splitted_data/test/masks/'\n",
-    "validation_masks_path = './datasets/taydo_splitted_data/validation/masks/'"
+    "train_masks_path = './datasets/taydo_splitted_data/train/dots/'\n",
+    "test_masks_path = './datasets/taydo_splitted_data/test/dots/'\n",
+    "validation_masks_path = './datasets/taydo_splitted_data/validation/dots/'"
    ],
    "metadata": {
     "collapsed": false,
@@ -42,7 +43,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "img = Image.open('./splitted_data/examples/image8004.jpg').convert('L')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "pix = np.array(img)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(1080, 1920)"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pix.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[116, 116, 116, ..., 142, 138, 137],\n       [116, 116, 116, ..., 141, 139, 138],\n       [116, 116, 116, ..., 137, 135, 135],\n       ...,\n       [ 84,  85,  85, ...,  78,  78,  78],\n       [ 32,  33,  33, ...,  32,  32,  32],\n       [  3,   4,   5, ...,   4,   4,   4]], dtype=uint8)"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pix"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "init_img = np.zeros(pix.shape, dtype='uint8')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(1080, 1920)"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "init_img.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def calc_centeroid_point(point_list):\n",
@@ -50,16 +162,22 @@
     "    y1 = point_list[1]\n",
     "    x2 = point_list[2]\n",
     "    y2 = point_list[3]\n",
-    "    centeroid = [ (x1 + x2) // 2 , (y1 + y2)//2]\n",
+    "    centeroid = [(x1 + x2) // 2, (y1 + y2) // 2]\n",
     "\n",
     "    return centeroid\n",
+    "\n",
     "\n",
     "def get_bounding_box_points(path):\n",
     "    bounding_box_collections = []\n",
     "    for file_xml in os.listdir(path):\n",
     "        info = {\n",
     "            'file_name': file_xml,\n",
-    "            'bounding_box_points': None\n",
+    "            'bounding_box_points': None,\n",
+    "            'image_info': {\n",
+    "                'height': None,\n",
+    "                'width': None,\n",
+    "                'channel': None\n",
+    "            },\n",
     "        }\n",
     "        bouding_boxes_xml_path = os.path.join(path, file_xml)\n",
     "\n",
@@ -68,6 +186,13 @@
     "\n",
     "        bounding_box_list = []\n",
     "        for child in root:\n",
+    "            if child.tag == 'size':\n",
+    "                for size_child in child:\n",
+    "                    if size_child.tag == 'width' or size_child.tag == 'height':\n",
+    "                        info['image_info'][size_child.tag] = size_child.text\n",
+    "                    if size_child.tag == 'depth':\n",
+    "                        info['image_info']['channel'] = size_child.text\n",
+    "\n",
     "            if child.tag == 'object':\n",
     "                for obj_child in child:\n",
     "                    if obj_child.tag == 'bndbox':\n",
@@ -82,12 +207,21 @@
     "\n",
     "    return bounding_box_collections\n",
     "\n",
-    "def save_bounding_box_to_dots(save_directory_path, bounding_box_collections):\n",
+    "\n",
+    "def save_bounding_box_to_dots(save_coordinate_directory_path, save_image_mask_directory_path, bounding_box_collections):\n",
     "    for info in bounding_box_collections:\n",
-    "        saved_file = os.path.splitext(save_directory_path + info['file_name'])[0] + '.txt'\n",
+    "        image_width = int(info['image_info']['width'])\n",
+    "        image_height = int(info['image_info']['height'])\n",
+    "        image_array = np.zeros((image_height, image_width), dtype='uint8')\n",
+    "\n",
+    "        saved_file = os.path.splitext(save_coordinate_directory_path + info['file_name'])[0] + '.txt'\n",
+    "        saved_image_file = os.path.splitext(save_image_mask_directory_path + info['file_name'])[0] + '.png'\n",
     "        f = open(saved_file, \"w\")\n",
     "        for points in info['bounding_box_points']:\n",
     "            centeroid = calc_centeroid_point(points)\n",
+    "            image_array[centeroid[1],centeroid[0]] = 255\n",
+    "            image = Image.fromarray(image_array)\n",
+    "            image.save(saved_image_file)\n",
     "            f.write('\\t'.join([str(centeroid[0]), str(centeroid[1])]) + '\\n')\n",
     "        f.close()"
    ],
@@ -100,11 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "bounding_box_collections = get_bounding_box_points(train_label_xml_path)\n",
-    "save_bounding_box_to_dots(train_dots_path, bounding_box_collections)"
+    "save_bounding_box_to_dots(train_dots_path, train_masks_path, bounding_box_collections)"
    ],
    "metadata": {
     "collapsed": false,
@@ -115,13 +249,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
-      "text/plain": "500"
+      "text/plain": "10"
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,9 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'file_name': 'image7995.xml',\n  'bounding_box_points': [[689, 402, 829, 542],\n   [920, 348, 1145, 452],\n   [1765, 372, 1920, 684],\n   [785, 374, 838, 457],\n   [703, 368, 757, 413],\n   [893, 336, 930, 384]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image8001.xml',\n  'bounding_box_points': [[691, 405, 837, 548],\n   [980, 324, 1238, 502],\n   [777, 351, 842, 409],\n   [1577, 428, 1810, 778],\n   [1400, 318, 1530, 529],\n   [839, 352, 883, 425]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image7994.xml',\n  'bounding_box_points': [[693, 405, 842, 540],\n   [899, 348, 1122, 455],\n   [847, 347, 888, 407],\n   [772, 364, 823, 433]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image7993.xml',\n  'bounding_box_points': [[688, 407, 831, 553],\n   [777, 369, 999, 468],\n   [770, 360, 812, 414],\n   [943, 337, 1000, 405]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image7992.xml',\n  'bounding_box_points': [[737, 383, 920, 474],\n   [688, 407, 834, 540],\n   [1250, 330, 1362, 498],\n   [857, 345, 894, 396],\n   [722, 367, 754, 397]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image8000.xml',\n  'bounding_box_points': [[691, 411, 835, 541], [872, 351, 991, 448]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image8004.xml',\n  'bounding_box_points': [[96, 141, 266, 332],\n   [341, 152, 527, 424],\n   [746, 95, 1038, 271],\n   [183, 364, 399, 584],\n   [404, 549, 596, 772],\n   [423, 734, 643, 978],\n   [627, 753, 818, 1001],\n   [730, 869, 934, 1074],\n   [642, 356, 811, 571],\n   [537, 168, 638, 356],\n   [661, 464, 854, 667],\n   [750, 534, 937, 760],\n   [873, 222, 1023, 405],\n   [923, 256, 1084, 432],\n   [1029, 407, 1146, 625],\n   [1149, 157, 1261, 337],\n   [1229, 205, 1342, 376],\n   [1343, 106, 1453, 278],\n   [1687, 130, 1797, 302],\n   [1712, 497, 1918, 725],\n   [1445, 5, 1580, 111],\n   [1288, 455, 1422, 661],\n   [1514, 486, 1615, 695],\n   [1462, 318, 1541, 515],\n   [1349, 298, 1437, 490],\n   [1553, 295, 1635, 506],\n   [1753, 299, 1831, 469],\n   [1531, 91, 1604, 257],\n   [1585, 56, 1685, 207],\n   [1639, 5, 1720, 98],\n   [1837, 3, 1912, 102],\n   [1157, 13, 1249, 155],\n   [1212, 6, 1310, 128],\n   [520, 44, 622, 186],\n   [457, 11, 600, 102]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image8002.xml',\n  'bounding_box_points': [[676, 402, 839, 547], [1492, 340, 1674, 614]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image7998.xml',\n  'bounding_box_points': [[683, 406, 835, 544],\n   [739, 379, 961, 472],\n   [1100, 334, 1168, 456],\n   [1208, 330, 1302, 486]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}},\n {'file_name': 'image8003.xml',\n  'bounding_box_points': [[1411, 171, 1600, 328],\n   [338, 2, 458, 79],\n   [87, 67, 131, 155],\n   [80, 1, 120, 61],\n   [135, 45, 183, 148],\n   [160, 2, 208, 55],\n   [181, 17, 222, 99],\n   [215, 30, 256, 137],\n   [247, 55, 289, 156],\n   [235, 5, 272, 67],\n   [273, 6, 318, 107],\n   [310, 32, 395, 148],\n   [395, 48, 472, 164],\n   [573, 38, 634, 133],\n   [537, 5, 574, 79],\n   [492, 1, 533, 64],\n   [834, 48, 933, 130],\n   [1084, 41, 1166, 130],\n   [1129, 47, 1253, 167],\n   [1296, 60, 1424, 164],\n   [1461, 52, 1572, 155],\n   [1429, 30, 1469, 82],\n   [430, 191, 554, 332],\n   [510, 278, 595, 414],\n   [434, 415, 549, 599],\n   [614, 697, 723, 929],\n   [680, 803, 768, 1074],\n   [834, 829, 937, 1080],\n   [681, 349, 773, 526],\n   [718, 229, 818, 392],\n   [792, 210, 888, 357],\n   [837, 317, 942, 497],\n   [899, 365, 1034, 571],\n   [1037, 568, 1193, 828],\n   [1610, 444, 1735, 591],\n   [1542, 649, 1803, 947],\n   [1450, 741, 1657, 1010],\n   [1457, 861, 1672, 1080]],\n  'image_info': {'height': '1080', 'width': '1920', 'channel': '3'}}]"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bounding_box_collections"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
