- U-net structure. - Make mixed final data. - Make mini data for testing.

--- a/notebooks/trancos_v3_masks_generator_1.ipynb
+++ b/notebooks/trancos_v3_masks_generator_1.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "train_images_path = './datasets/trancos_v3_splitted_data/train/images/'\n",
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "bounding_box_collections = get_bounding_box_points(train_dots_path, train_images_path)\n",
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "bounding_box_collections = get_bounding_box_points(test_dots_path, test_images_path)\n",
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "bounding_box_collections = get_bounding_box_points(validation_dots_path, validation_images_path)\n",
@@ -149,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "bounding_box_collections = get_bounding_box_points(trainval_dots_path, trainval_images_path)\n",
