--- a/notebooks/trancos_v3_pre-processing_data.ipynb
+++ b/notebooks/trancos_v3_pre-processing_data.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import shutil\n",
@@ -13,7 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "imagesPath = './splitted_data/images/'\n",
